--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,7 @@
   "name": "power_rankings",
   "description": "",
   "main": "index.html",
-  "authors": [
-    "t3rr0r <mail@t3rr0r.com>"
-  ],
+  "authors": [],
   "license": "MIT",
   "homepage": "",
   "private": true,
@@ -16,7 +14,6 @@
     "tests"
   ],
   "dependencies": {
-    "doT": "^1.0.1",
-    "semantic": "semantic-ui#^2.2.4"
+    "doT": "^1.0.1"
   }
 }
