--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.14.0",
     "jsonfile": "^2.4.0",
     "lodash": "^4.16.0",
-    "log": "https://github.com/vacay/log/tarball/0.0.3"
+    "log": "https://github.com/vacay/log/tarball/0.0.3",
+    "moment": "^2.15.1"
   },
   "devDependencies": {
     "grunt-contrib-clean": "^1.0.0",
